Fix(knowledge): 批量过滤三类门户图谱